Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all Branch Management features will be enabled in the Deployment Flow.</description>
    <inlineHelpText>If checked, all Branch Management features will be enabled in the Deployment Flow.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>