Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Block_Commits__c.field-meta.xml
<CustomField>
    <fullName>Block_Commits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, committing changes on user stories linked to this Pipeline will not be allowed</description>
    <inlineHelpText>If checked, committing changes on user stories linked to this Pipeline will not be allowed</inlineHelpText>
    <label>Block Commits</label>
    <type>Checkbox</type>
</CustomField>