Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Branch_Management_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Branch_Management_Coordinates__c</fullName>
    <description>This field is used to store the Branch Management Step locations of each box. This field should not be added to the page layout.</description>
    <label>Branch Management Coordinates</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>