Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Calculate_Based_on__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Based_on__c</fullName>
    <inlineHelpText>If Branch is selected, Branch Management page will work as before, if User Story selected, calculation and result will be based on User Stories.</inlineHelpText>
    <label>Calculate Based on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>User Story</fullName>
                <default>true</default>
                <label>User Story</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>