Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/CommitJobTemplate__c.field-meta.xml
<CustomField>
    <fullName>CommitJobTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the Job Template that implements the commit action for this Pipeline</description>
    <inlineHelpText>Select the Job Template that implements the commit action for this Pipeline</inlineHelpText>
    <label>Commit Job Template</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Pipelines (Commit Job Template)</relationshipLabel>
    <relationshipName>Pipelines2</relationshipName>
    <type>Lookup</type>
</CustomField>