Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Deployment_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Job_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Job Template</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Pipelines (Deployment Job Template)</relationshipLabel>
    <relationshipName>Pipelines1</relationshipName>
    <type>Lookup</type>
</CustomField>