Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Disable_Validations__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Deployment Flow Steps best practices validations will be disabled.</description>
    <inlineHelpText>If checked, Deployment Flow Steps best practices validations will be disabled.</inlineHelpText>
    <label>Disable Validations</label>
    <type>Checkbox</type>
</CustomField>