Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Enable_Copado_DX__c.field-meta.xml
<CustomField>
    <fullName>Enable_Copado_DX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Copado DX</label>
    <type>Checkbox</type>
</CustomField>