Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Enable_Smart_Conflict_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Enable_Smart_Conflict_Resolution__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, Copado will stop applying Smart Conflict resolution during the promotion process and users will have to manually resolve conflicts again in every subsequent promotion.</description>
    <inlineHelpText>If unchecked, Copado will stop applying Smart Conflict resolution during the promotion process and users will have to manually resolve conflicts again in every subsequent promotion.</inlineHelpText>
    <label>Enable Smart Conflict Resolution</label>
    <type>Checkbox</type>
</CustomField>