Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Equal_Branch_Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equal_Branch_Environment_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Environment names must equal their corresponding Branches in the Deployment Flow Steps.</description>
    <inlineHelpText>If checked, Environment names must equal their corresponding Branches in the Deployment Flow Steps.</inlineHelpText>
    <label>Enforce branch/env naming convention</label>
    <type>Checkbox</type>
</CustomField>