Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Git Repository linked to the Deployment Flow. All branches of the Deployment Flow Steps must exist in this Git Repository.</description>
    <inlineHelpText>Git Repository linked to the Deployment Flow. All branches of the Deployment Flow Steps must exist in this Git Repository.</inlineHelpText>
    <label>Git Repository</label>
    <referenceTo>Git_Repository__c</referenceTo>
    <relationshipName>Deployment_Flows</relationshipName>
    <type>Lookup</type>
</CustomField>