Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Hide_Tabs__c.field-meta.xml
<CustomField>
    <fullName>Hide_Tabs__c</fullName>
    <inlineHelpText>Tabs to hide in Branch Management detail window</inlineHelpText>
    <label>Hide Tabs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commits Ahead</fullName>
            </value>
            <value>
                <fullName>Commits Behind</fullName>
            </value>
            <value>
                <fullName>Deployment Error</fullName>
            </value>
            <value>
                <fullName>File Differences</fullName>
            </value>
            <value>
                <fullName>Auto Resolved Conflicts</fullName>
            </value>
            <value>
                <fullName>Merged Files</fullName>
            </value>
            <value>
                <fullName>Selenium Test Groups</fullName>
            </value>
            <value>
                <fullName>Compliance Scan Results</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>