Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Main_Branch__c.field-meta.xml
<CustomField>
    <fullName>Main_Branch__c</fullName>
    <description>Main branch of the selected Git Repository (e.g. master).</description>
    <inlineHelpText>Main branch of the selected Git Repository (e.g. master).</inlineHelpText>
    <label>Main Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>