Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Merge_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Merge_Strategy__c</fullName>
    <inlineHelpText>When a conflicted file cannot be semantically merged during an Auto Resolve, the entire file is overwritten by default. You can choose to overwrite only the conflicting lines and merge the mergeable lines; Copado uses the &quot;Theirs&quot; git merge strategy.</inlineHelpText>
    <label>Auto Resolve Conflict Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Overwrite file</label>
            </value>
            <value>
                <fullName>Theirs</fullName>
                <label>Overwrite conflicting lines only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>