Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Order_by__c.field-meta.xml
<CustomField>
    <fullName>Order_by__c</fullName>
    <inlineHelpText>Fill that field only if you want to change the selected user stories order on deployment.
This value will prefill the order by field on related Promotion record creation if set. (usage exp: name asc)</inlineHelpText>
    <label>Order User Stories by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>