Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Promotion_Automation__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Automation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>List of steps to be used when merging user stories before deployment.</inlineHelpText>
    <label>Promotion Automation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active automation templates are allowed</errorMessage>
        <filterItems>
            <field>Deployment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Automation Template</value>
        </filterItems>
        <filterItems>
            <field>Deployment__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>