Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Promotion_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Job_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Job Template</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Pipelines</relationshipLabel>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>