Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/fields/Static_Code_Analysis_Settings__c.field-meta.xml
<CustomField>
    <fullName>Static_Code_Analysis_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Static Code Analysis settings used whenever the analysis is run in Environments or User Stories linked to the Deployment Flow.</description>
    <inlineHelpText>Static Code Analysis settings used whenever the analysis is run in Environments or User Stories linked to the Deployment Flow.</inlineHelpText>
    <label>Static Code Analysis Settings</label>
    <referenceTo>Static_Code_Analysis_Settings__c</referenceTo>
    <relationshipName>Deployment_Flows</relationshipName>
    <type>Lookup</type>
</CustomField>