Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/validationRules/Unique_Template_for_promote_and_deploy.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Template_for_promote_and_deploy</fullName>
    <active>true</active>
    <description>A pipeline cannot have the same template for both Promote and Deploy</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Promotion_Automation__c)), 
  Promotion_Automation__c ==  Deployment_Automation__c
)</errorConditionFormula>
    <errorDisplayField>Deployment_Automation__c</errorDisplayField>
    <errorMessage>A pipeline cannot have the same template for both Promote and Deploy</errorMessage>
</ValidationRule>