Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Manage_Branches__c</columns>
    <columns>Git_Repository__c</columns>
    <columns>Main_Branch__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>